=================
Changes for crash
=================

Unreleased
==========

- Use Python Testcontainers for integration testing

2024/02/08 0.31.2
=================

- Update to crate>=0.35.2. It is needed to accompany the recent
  improvements about ``--timeout``.

2024/02/02 0.31.1
=================

- Better catch unauthorized errors when forcing a password prompt.

2024/01/29 0.31.0
=================

- Added command-line argument ``--timeout``, to configure network timeout
  values in seconds. The default connect timeout is five seconds now,
  the default read timeout is the default setting of the ``socket`` module,
  which is "infinite" by default.

2024/01/12 0.30.2
=================

- Added support for setting an external pager via ``\pager <executable>``

- Added ROLE keyword for autocomplete & autocapitalize

2023/11/23 0.30.1
=================

- Added support for Python 3.12.
- Added possible output format choices for ``--format`` argument to
  ``crash --help``. Thanks, @mfussenegger.

2023/07/06 0.30.0
=================

- Fix inconsistent spacing around printed runtime. Thank you, @hammerhead.

- Add support for multi-line input of commands and SQL statements for both
  copy-pasting inside the crash shell and input pipes into crash.

2023/02/16 0.29.0
=================

- Add support for Python 3.11, and drop support for Python 3.5 and 3.6.

- Fix compatibility issue with ``crate-0.30.0`` in the area of comparing
  server version numbers.

- Dependencies: Update to tabulate 0.9, platformdirs, and prompt-toolkit v3.

2022/04/13 0.28.0
=================

- Added support for Python 3.10.

- Fixed tabular output with rows containing only whitespace or other
  non-printable characters by upgrading to upstream ``tabulate`` package.

2021/01/20 0.27.0
=================

- Added support for Python 3.9.

- Upgraded the CrateDB python driver to 0.26.0 in order to enable TCP keepalive
  on the socket level.
